<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.Fragments.CommentsFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/comments_header"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/comments_count_label2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/comments"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_gravity="center"/>

            <TextView
                android:id="@+id/comments_count2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:layout_weight="3"
                android:layout_marginStart="8dp"
                android:layout_gravity="center"
                tools:text="100"/>

            <ImageView
                android:id="@+id/filter_comments"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingVertical="16dp"
                android:src="@drawable/ic_filter"
                android:layout_weight="1"
                android:contentDescription="@string/filter_comments"
                android:clickable="true"
                android:focusable="true"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:layout_gravity="center"/>

            <ImageView
                android:id="@+id/close_comments"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingVertical="16dp"
                android:src="@drawable/ic_close"
                android:layout_weight="1"
                android:contentDescription="@string/close_comments"
                android:clickable="true"
                android:focusable="true"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:layout_gravity="center"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/comments_list"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/comments_header"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:listitem="@layout/comment_item"/>

</androidx.constraintlayout.widget.ConstraintLayout>