<?xml version="1.0" encoding="utf-8"?>
    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:id="@+id/refreshLayout">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".UI.Fragments.HomeFragment">


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/videos"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:paddingBottom="50dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:itemCount="16"
            tools:src="@tools:sample/backgrounds/scenic"/>

        <LinearLayout
            android:id="@+id/error_box"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/error_img_home"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:contentDescription="@string/network_error"
                android:layout_weight="1"
                android:src="@drawable/nointernet" />

            <TextView
                android:id="@+id/home_page_error"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="30sp"
                android:textColor="@color/black"
                android:fontFamily="@font/quicksand_bold"
                android:layout_gravity="center"
                android:layout_marginVertical="16dp"
                tools:text="No Internet Connection!"/>

            <Button
                android:id="@+id/retry_homepage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/red"
                android:textColor="@color/white"
                android:text="@string/retry"
                android:layout_gravity="center"
                android:textSize="22sp"
                android:padding="16dp"
                android:layout_marginBottom="50dp" />

        </LinearLayout>

        <FrameLayout
            android:id="@+id/partially_loaded_network_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <RelativeLayout
                android:id="@+id/user_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.cardview.widget.CardView
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    app:cardCornerRadius="18dp"
                    app:cardElevation="0dp">

                    <ImageView
                        android:layout_width="64dp"
                        android:layout_height="64dp"
                        android:contentDescription="@string/partial_network_error"
                        android:src="@drawable/grumpnetwork"/>

                </androidx.cardview.widget.CardView>

            </RelativeLayout>

        </FrameLayout>

        <ProgressBar
            android:id="@+id/paginationProgressBar"
            style="?attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            android:background="@android:color/transparent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>