<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/description_sheet"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:orientation="horizontal"
        android:background="@drawable/card"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/description_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:padding="16dp"
            android:textColor="@color/black"
            android:text="@string/description"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:text="Description" />

        <View
            android:id="@+id/dragger"
            android:layout_width="48dp"
            android:layout_height="5dp"
            android:background="@color/gray1"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <ImageView
            android:id="@+id/close_description"
            android:layout_width="56dp"
            android:layout_height="match_parent"
            android:src="@drawable/ic_close"
            android:paddingVertical="16dp"
            android:contentDescription="@string/close_description"
            android:clickable="true"
            android:focusable="true"
            android:background="?attr/selectableItemBackgroundBorderless"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:id="@+id/description_bottom"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray1"
        android:layout_marginTop="64dp"/>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="64dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/video_title_in_description_sheet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:fontFamily="@font/quicksand_bold"
                android:padding="16dp"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="22 times Roger Federer DESTROYED The Ball (Supersonic Shots)"/>

            <RelativeLayout
                android:id="@+id/channel_image_in_description_sheet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/video_title_in_description_sheet">

                <androidx.cardview.widget.CardView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    app:cardCornerRadius="20dp"
                    app:cardElevation="0dp">

                    <ImageView
                        android:id="@+id/channel_logo_in_description_box"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:importantForAccessibility="no"
                        android:scaleType="centerCrop"
                        android:src="@drawable/youtubechannel"/>

                </androidx.cardview.widget.CardView>

            </RelativeLayout>

            <TextView
                android:id="@+id/channel_name_in_description_box"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:padding="8dp"
                android:textColor="@color/black"
                tools:text="The BTFGame"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@id/channel_image_in_description_sheet"
                app:layout_constraintTop_toBottomOf="@id/video_title_in_description_sheet"
                app:layout_constraintBottom_toBottomOf="@id/channel_image_in_description_sheet"/>

            <LinearLayout
                android:id="@+id/video_stats_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@id/channel_image_in_description_sheet"
                android:paddingVertical="8dp">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <TextView
                        android:id="@+id/description_like_count"
                        android:layout_width="match_parent"
                        android:textSize="20sp"
                        android:fontFamily="@font/quicksand_bold"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:gravity="center"
                        tools:text="32K"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:gravity="center"
                        android:text="@string/likes"/>

                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <TextView
                        android:id="@+id/description_view_count"
                        android:layout_width="match_parent"
                        android:textSize="20sp"
                        android:fontFamily="@font/quicksand_bold"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:gravity="center"
                        tools:text="53,29,276"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:gravity="center"
                        android:text="@string/views"/>

                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <TextView
                        android:id="@+id/added_year"
                        android:layout_width="match_parent"
                        android:textSize="20sp"
                        android:fontFamily="@font/quicksand_bold"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:gravity="center"
                        tools:text="2019"/>

                    <TextView
                        android:id="@+id/added_date_and_month"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:gravity="center"
                        tools:text="8 Jun"/>

                </LinearLayout>

            </LinearLayout>

            <View
                android:id="@+id/description_divider_1"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gray1"
                app:layout_constraintTop_toBottomOf="@id/video_stats_description"
                android:layout_margin="16dp"/>

            <TextView
                android:id="@+id/video_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:padding="16dp"
                android:textColor="@color/black"
                app:layout_constraintTop_toBottomOf="@id/description_divider_1"
                tools:text="Speaking about tennis trick shots?! Roger Federer is the master of trick shots. Highlights between Roger Federer and other pro tennis players."/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>



</androidx.coordinatorlayout.widget.CoordinatorLayout>